--- a/contract/package.json
+++ b/contract/package.json
@@ -3,12 +3,9 @@
   "version": "1.0.0",
   "license": "(MIT AND Apache-2.0)",
   "scripts": {
-    "start": "cd frontend && npm run start",
-    "deploy": "cd contract && rm -rf neardev && ./deploy.sh",
-    "build": "npm run build:contract && npm run build:web",
-    "build:web": "cd frontend && npm run build",
-    "build:contract": "cd contract && ./build.sh",
-    "contract:init": "node contract/tests/create_communities.js",
+    "build": "cd contract && ./build.sh",
+    "deploy": "cd contract && ./deploy.sh",
+    "init": "node contract/tests/create_communities.js",
     "test": "node contract/tests/test.js"
   },
   "devDependencies": {
