--- a/frontend-demo/package.json
+++ b/frontend-demo/package.json
@@ -37,6 +37,7 @@
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "copy-to-clipboard": "^3.3.3",
+    "date-fns": "^2.29.3",
     "firebase": "^9.14.0",
     "firebase-admin": "^11.3.0",
     "firebase-functions": "^4.1.0",
